nuevos programas en el registro

--- a/Registro.html
+++ b/Registro.html
@@ -86,8 +86,11 @@
 									  		<option value="3">Javascript</option>
 									  		<option value="4">Typescript</option>
 									  		<option value="5">Java</option>
-									  		<option value="5">Ruby</option>
-									  		<option value="6">Otro</option>
+									  		<option value="6">Ruby</option>
+									  		<option value="7">C++</option>
+									  		<option value="8">C</option>
+									  		<option value="9">VSB(Macros Excel)</option>
+									  		<option value="0">Otro</option>
 									  		</select>
 									</div>
 
@@ -99,9 +102,9 @@
 									  		<option value="2">CSS3</option>
 									  		<option value="3">Fundation</option>
 									  		<option value="4">Mustach</option>
-									  		<option value="1">Angular</option>
-									  		<option value="1">Material</option>
-									  		<option value="5">Otro</option>
+									  		<option value="5">Angular</option>
+									  		<option value="6">Material</option>
+									  		<option value="0">Otro</option>
 									  		</select>
 
 									</div>
