mejoras en estructura

--- a/public/registro.html
+++ b/public/registro.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="es">
 <!--
 	Miniport by HTML5 UP
@@ -128,8 +128,6 @@
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span></span></a></li>
-								
-								
 							</ul>
 							<hr />
 						</div>
@@ -148,7 +146,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/menu.js"></script>
-			<script src="assets/js/sweetalert2.js"></script>
 			<script src="assets/js/registro.js"></script>
 
 
