--- a/public/salonFama.html
+++ b/public/salonFama.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="es">
 <!--
 	Miniport by HTML5 UP
@@ -106,7 +106,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/menu.js"></script>
-
 
 	</body>
 </html>
