--- a/public/registro.html
+++ b/public/registro.html
@@ -81,16 +81,16 @@
 									<div class="col-6 col-12-small">
 										 <select id="Back">
 										 	<option value="">Back-end</option>
-											<option value="1">PHP</option>
-									  		<option value="2">Python</option>
-									  		<option value="3">Javascript</option>
-									  		<option value="4">Typescript</option>
-									  		<option value="5">Java</option>
-									  		<option value="6">Ruby</option>
-									  		<option value="7">C++</option>
-									  		<option value="8">C</option>
-									  		<option value="9">VSB(Macros Excel)</option>
-									  		<option value="0">Otro</option>
+											<option value="">PHP</option>
+									  		<option value="">Python</option>
+									  		<option value="">Javascript</option>
+									  		<option value="">Typescript</option>
+									  		<option value="">Java</option>
+									  		<option value="">Ruby</option>
+									  		<option value="">C++</option>
+									  		<option value="">C</option>
+									  		<option value="">VSB(Macros Excel)</option>
+									  		<option value="">Otro</option>
 									  		</select>
 									</div>
 
